   - deraadt@cvs.openbsd.org 2002/03/30 17:45:46
     [scp.c]
     stretch banners
 - (bal) OpenBSD CVS Sync (now for the real sync)
   - markus@cvs.openbsd.org 2002/03/27 22:21:45
     [ssh-keygen.c]
     try to import keys with extra trailing === (seen with ssh.com < 2.0.12)
   - markus@cvs.openbsd.org 2002/03/28 15:34:51
     [session.c]
     do not call record_login twice (for use_privsep)

20020401
 - (stevesk) [monitor.c] PAM should work again; will *not* work with
   UsePrivilegeSeparation=yes.
 - (stevesk) [auth1.c] fix password auth for protocol 1 when
   !USE_PAM && !HAVE_OSF_SIA; merge issue.

20020331
 - (tim) [configure.ac] use /bin/test -L to work around broken builtin on
   Solaris 8
 - (tim) [sshconnect2.c] change uint32_t to u_int32_t

20020330
 - (stevesk) [configure.ac] remove header check for sys/ttcompat.h
   bug 167

20020327
 - (bal) 'pw' should be 'authctxt->pw' in auth1.c spotted by 
   kent@lysator.liu.se
 - (bal) OpenBSD CVS Sync
   - markus@cvs.openbsd.org 2002/03/26 11:34:49
     [ssh.1 sshd.8]
     update to recent drafts
   - markus@cvs.openbsd.org 2002/03/26 11:37:05
     [ssh.c]
     update Copyright
   - markus@cvs.openbsd.org 2002/03/26 15:23:40
     [bufaux.c]
     do not talk about packets in bufaux
   - rees@cvs.openbsd.org 2002/03/26 18:46:59
     [scard.c]
     try_AUT0 in read_pubkey too, for those paranoid few who want to acl 'sh'
   - markus@cvs.openbsd.org 2002/03/26 22:50:39
     [channels.h]
     CHANNEL_EFD_OUTPUT_ACTIVE is false for CHAN_CLOSE_RCVD, too
   - markus@cvs.openbsd.org 2002/03/26 23:13:03
     [auth-rsa.c]
     disallow RSA keys < 768 for protocol 1, too (rhosts-rsa and rsa auth)
   - markus@cvs.openbsd.org 2002/03/26 23:14:51
     [kex.c]
     generate a new cookie for each SSH2_MSG_KEXINIT message we send out
   - mouring@cvs.openbsd.org 2002/03/27 11:45:42
     [monitor.c]
     monitor_allowed_key() returns int instead of pointer.  ok markus@
  
20020325